# FerroZero

./: Cargo.toml
chess_tables/: Cargo.toml
chess_tables/src/: lib.rs
chess_utils/: Cargo.toml
chess_utils/src/: consts.rs  lib.rs  shifts.rs  utils.rs
gen_tables/: Cargo.toml  build.rs
gen_tables/src/: lib.rs
src/: chess_attacks.rs  chessboard.rs  consts.rs  datastructures.rs  inference_primitives.rs  main.rs  possible_moves.rs  tensor_buffer.rs  tree_search.rs  util.rs  utils.rs
