[package]
name = "alphazero"
version = "0.1.0"
edition = "2024"

[dependencies]
chess_tables = { path = "chess_tables" }
chess_utils = { path = "chess_utils" }
gen_tables = {path = "gen_tables"}
unroll = "0.1.5"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

[workspace]
members = [
    "chess_tables",
    "chess_utils",
    "gen_tables",
]

[dev-dependencies]
rand = "0.9.2"
