[package]
name = "alphazero"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
chess_tables = { path = "chess_tables" }
chess_utils = { path = "chess_utils" }
gen_tables = {path = "gen_tables"}
unroll = "0.1.5"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tch = "0.22.0"
rand = "0.10.0-rc.0"
redis = { version = "1.0.0-rc.2", features = ["tokio-comp", "connection-manager", "aio"] }
dashmap = "7.0.0-rc2"
serde = { version = "1.0.228" }
flexbuffers = "25.9.23"

[workspace]
members = [
    "chess_tables",
    "chess_utils",
    "gen_tables",
]
